<resources>
    <string name="app_name">Jeni\'s Assistant</string>
    <string name="title_activity_home">Accueil</string>
    <string name="title_calendar">Emploi du temps</string>
    <string name="title_boitage">Boîtage</string>
    <string name="title_contact_telephone">Appels</string>
    <string name="add_action">Ajouter</string>
    <string name="which_calendar_event">Quel type d\'évenement?</string>

    <string name="add_estimation">Programmer une estimation</string>
    <string name="add_visite">Programmer une visite</string>
    <string name="add_reminder">Se mettre un reminder</string>
    <string name="date_and_time">date et heure</string>
    <string name="adresse">Adresse</string>
    <string name="nom_du_contact">Nom du contact</string>
    <string name="text_object">message</string>
    <string name="description_icon">icon</string>
    <string name="save_label">Enregister</string>
    <string name="rappel_save">Rappel enregistré</string>
    <string name="rendezvous_save">Rendez-vous enregistré</string>
    <string-array name="calendar_actions">
        <item>Programmer une estimation</item>
        <item>Programmer une visite</item>
        <item>Se mettre un reminder</item>
    </string-array>

    <!-- date pattern -->
    <string name="datetime_pattern_full">EE d MMM y à H:mm</string>
    <string name="phone_number">Numéro de tél</string>
    <string name="email">Email</string>
    <string name="commentaire_a_ajouter">Info à rajouter</string>

    <string name="value_with_suffix">%1$s %2$s</string>
    <string name="label_with">%1$s: </string>
</resources>